--- a/Login/Login.html
+++ b/Login/Login.html
@@ -1,39 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tela de login</title>
 </head>
+
 <body>
     <div class="Contrainer">
-    <h2>Login</h2>
-    <form action="index.html" method="post">
-        <div class="input-field">
-            <input type="text" id="nome" placeholder="Escreva o seu nome"> </input>
-            <label for="Nome">Nome:</label>
+        <h2>Login</h2>
+
+        <!--Fazendo a tela de Login e colocando o cadastro (Caso a pessoa ja seja cadastrada)-->
+
+        <form action="index.html" method="post">
+
+            <div class="input-field">
+                <input type="text" id="nome" placeholder="Escreva o seu nome"> </input>
+                <label for="Nome">Nome:</label>
+            </div>
+
+            <div class="input-field">
+                <input type="password" id="senha" placeholder="Escreva a sua senha"> </input>
+                <label for="senha">Senha:</label>
+            </div>
+
+            <div class="center">
+                <button>Botão</button>
+            </div>
+
+        </form>
+
+
+        <div class="Link">
+            <a href="">
+                <p>Esqueceu sua senha ?</p>
+            </a>
+
+            <a href="">
+                <p>Ainda não sou cadastrado</p>
+            </a>
         </div>
-
-        <div class="input-field">
-            <input type="password" id="senha" placeholder="Escreva a sua senha"> </input>
-            <label for="senha">Senha:</label>
-        </div>
-
-        <div class="center">
-            <button>Botão</button>
-        </div>
-
-
-
-
-    </form>
-
-
 
 
     </div>
 
-    
+
 </body>
+
 </html>
