Alteração do CSS

--- a/TesteLogin/TesteLogin.html
+++ b/TesteLogin/TesteLogin.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="box">
-        <span class="borderLine"></span>
+        <span class="Borda"></span>
         <form>
             <h2>Login</h2>
             <div class="inputbox">
@@ -29,6 +29,8 @@
                 <!--Colocar o link onde está o "#"-->
 
                 <a href="#">Esqueci a senha</a>
+                <p>ou</p>
+                <a href="#">Realizar cadastro</a>
                 
 
             </div>
@@ -36,6 +38,7 @@
         </form>
 
     </div>
+
 </body>
 
 </html>
