--- a/Login/Login.html
+++ b/Login/Login.html
@@ -5,48 +5,45 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tela de login</title>
+    <title>Login</title>
+    <link rel="stylesheet" href="Login.css">
 </head>
 
 <body>
-    <div class="Contrainer">
-        <h2>Login</h2>
+    <div class="box">
+        <span class="Borda"></span>
+        <form>
+            <center><img src="zebra.png" style="justify-content:center; width: 60px; height: 80px;"> </center>
+            <h2>Login</h2>
+            <div class="inputbox">
+                <input type="texto" required="Obrigatório">
+                <span>Nome de usuário</span>
+                <i></i>
 
-        <!--Fazendo a tela de Login e colocando o cadastro (Caso a pessoa ja seja cadastrada)-->
+            </div>
+            <div class="inputbox">
+                <input type="Senha" required="Obrigatório">
+                <span>Senha</span>
+                <i></i>
+            </div>
+            <div class="Links">
+                <!--Colocar o link onde está o "#"-->
 
-        <form action="index.html" method="post">
+                <a href="#">Esqueci a senha</a>
+                <h3>ou</h3>
+                <a href="#">Realizar cadastro</a>
+                
 
-            <div class="input-field">
-                <input type="text" id="nome" placeholder="Escreva o seu nome"> </input>
-                <label for="Nome">Nome:</label>
             </div>
 
-            <div class="input-field">
-                <input type="password" id="senha" placeholder="Escreva a sua senha"> </input>
-                <label for="senha">Senha:</label>
-            </div>
-
-            <div class="center">
-                <button>Botão</button>
+            <div class="Button">
+                <input type="submit" value="Login">
             </div>
 
         </form>
 
-
-        <div class="Link">
-            <a href="">
-                <p>Esqueceu sua senha ?</p>
-            </a>
-
-            <a href="">
-                <p>Ainda não sou cadastrado</p>
-            </a>
-        </div>
-
-
     </div>
-
-
+    <!-- <img src="zebra.png" style="float:left; width: 400px; height: 500px;"> -->
 </body>
 
 </html>
