--- a/Login/Login.html
+++ b/Login/Login.html
@@ -13,7 +13,9 @@
     <div class="box">
         <span class="Borda"></span>
         <form>
-            <center><img src="zebra.png" style="justify-content:center; width: 60px; height: 80px;"> </center>
+            
+            <!-- <img src="zebraca.png"> -->
+
             <h2>Login</h2>
             <div class="inputbox">
                 <input type="texto" required="Obrigatório">
